# Carmilla

./: Carmilla.py  LICENSE  README.md  main.py  pyproject.toml
cogs/: anime.py  feed.py
models/AniList/: AniList.py  types.py
queries/: AniList.py
